# todo

backend/: .gitignore  Cargo.toml
backend/src/: controller.rs  db.rs  main.rs  models.rs  schema.rs
web/: package.json
web/components/: Creation.tsx  Navbar.tsx  TaskList.tsx
web/pages/: index.tsx
web/src/: api.ts  types.ts
web/styles/: globals.css
